tests/core/snapshots/execution_spec__test-hostname-faliure.md_errors.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of invalid IP address syntax",
    "trace": [
      "schema",
      "@server",
      "hostname"
    ],
    "description": null
  }
]
