tests/core/snapshots/execution_spec__test-invalid-query-in-http.md_errors.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Parsing failed because of invalid type: map, expected a sequence",
    "trace": [
      "@http",
      "query"
    ],
    "description": null
  }
]
