tests/core/snapshots/execution_spec__test-missing-root-types.md_errors.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Query type is not defined",
    "trace": [
      "QueryType"
    ],
    "description": null
  },
  {
    "message": "Mutation type is not defined",
    "trace": [
      "MutationDef"
    ],
    "description": null
  }
]
